<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F1F1"
    tools:context=".MenuPortero">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Contenedor de perfil -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contenedorPerfil"
            android:elevation="16dp"
            android:layout_width="292dp"
            android:layout_height="177dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/contenedor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/fraccionamiento"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelFraccionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="52dp"
            android:text="Nombre"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contenedor de acceso -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorAcceso"
        android:elevation="16dp"
        android:layout_width="292dp"
        android:layout_height="177dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/contenedor"
        app:layout_constraintTop_toBottomOf="@+id/contenedorPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textoTituloAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/solicitarAcceso"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textoDescripcionAcceso"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/solicitarAccesoInfo"
            app:layout_constraintTop_toBottomOf="@+id/textoTituloAcceso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/botonSolicitarAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/solicitarAcceso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoDescripcionAcceso" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Contenedor de monitoreo -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contenedorMonitoreo"
        android:elevation="16dp"
        android:layout_width="298dp"
        android:layout_height="290dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/contenedor"
        app:layout_constraintTop_toBottomOf="@+id/contenedorAcceso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textoTituloPuerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/abrirPuerta"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textoDescripcionPuerta"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abrirPuertaInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoTituloPuerta" />

        <Button
            android:id="@+id/botonAbrirPuerta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/abrirPuerta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoDescripcionPuerta" />

        <TextView
            android:id="@+id/textoTituloHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:text="@string/historialVisitas"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textoDescripcionHistorial"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/historialVisitasInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.763"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoTituloHistorial" />

        <Button
            android:id="@+id/botonVerHistorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/verHistorial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoDescripcionHistorial" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>