<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#E4E4E4"
    tools:context=".ui.home.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:elevation="16dp"
            android:id="@+id/constraintLayout"
            android:layout_width="296dp"
            android:layout_height="305dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/contenedor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnVerHistorial"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="116dp"
                android:layout_marginBottom="17dp"
                android:backgroundTint="@android:color/black"
                android:text="@string/btnVerHistorial"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="195dp"
                android:layout_height="0dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="6dp"
                android:text="@string/VeTuHistorial"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Button
                android:id="@+id/btnProcesarVista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="125dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@android:color/black"
                android:text="@string/btnProcesarVisita"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="262dp"
                android:layout_height="36dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/procesarVistaInfo"
                app:layout_constraintBottom_toTopOf="@+id/btnProcesarVista"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="216dp"
                android:layout_marginBottom="6dp"
                android:text="@string/Visitas"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="115dp"
                android:layout_marginBottom="8dp"
                android:text="@string/HistorialVisita"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:elevation="16dp"
            android:layout_width="292dp"
        android:layout_height="177dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/contenedor"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintVertical_bias="0.13">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="15dp"
                android:text="@string/CompletarPerfil"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
            android:id="@+id/textView5"
            android:layout_width="239dp"
            android:layout_height="0dp"
            android:layout_marginBottom="13dp"
            android:text="@string/CompletarInfo"
            app:layout_constraintBottom_toTopOf="@+id/btnCompletarPerfil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnCompletarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="116dp"
                android:backgroundTint="@android:color/black"
                android:text="@string/CompletarPerfil"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="16dp"
        android:id="@+id/constraintLayout3"
        android:layout_width="292dp"
        android:layout_height="177dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/contenedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelFraccionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Nombre"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imgAccesoQR"
            android:layout_width="117dp"
            android:layout_height="105dp"
            app:layout_constraintBottom_toTopOf="@+id/labelFraccionamiento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.432"
            tools:src="@tools:sample/avatars" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>