<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F1F1"
    tools:context=".MonitorearVisitantes">

    <!-- Contenedor principal -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="298dp"
        android:elevation="16dp"
        android:layout_height="570dp"
        android:background="@drawable/contenedor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273">

        <Button
            android:id="@+id/btnMonitorear"
            android:layout_width="264dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="13dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/Monitorear"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnRegistrarSalida"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtPrueba"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/SeleccionarVisitante"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/Marcar"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPrueba" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="283dp"
            android:layout_height="230dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="41dp"
            app:layout_constraintBottom_toTopOf="@+id/btnMonitorear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp" />


        </ScrollView>

        <Button
            android:id="@+id/btnRegistrarSalida"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/registrarSalida"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
